Squashed commit of the following:
commit 9536e0a1fea528d5a3333894b11214659b1b5b12
Author: bloodrizer <cheshire.panther@gmail.com>
Date:   Sat Oct 28 17:16:45 2023 -0700

    Squashed commit of the following:

    commit 094e8c54c608a0367719b5e81c7247433cc7776b
    Author: bloodrizer <cheshire.panther@gmail.com>
    Date:   Sat Oct 28 17:14:03 2023 -0700

        Squashed commit of the following:

        commit 4d460e498deec577d1d564cc2f5cffe6a3b86dd0
        Author: plcp <matthieu@daumas.me>
        Date:   Sun Oct 29 00:03:13 2023 +0000

            Merged in bsk/emptySky (pull request #1229)

            Sattelite penalty under repeated BSK

            * Sattelite penalty under repeated BSK

            Approved-by: Brent Call

        commit c9f660133bbd8bb08758ba73f8e6b9476fcf78fe
        Author: Pedro Zunino <pedrozunino7@gmail.com>
        Date:   Sat Oct 28 18:46:46 2023 +0000

            Merged in feat/move-queue-items (pull request #1236)

            feat: rearrange queue items

            * feat: rearrange queue items

        commit 2caf901235a4f28bf3901101c521a39ceab6ec6d
        Author: Ziggurat <ziggurat0001@protonmail.com>
        Date:   Sat Oct 28 10:04:51 2023 +0000

            Merged in dev/beta (pull request #1240)

            Dev/beta (master -> beta)

            * small siphoning ui fixes, siphoning description change and adding totalPerDayDelta for alicorns

            * get rid of debug things

            * improve description

            * Merged in master (pull request #1225)

            Siphoning and pacts ui improvements
            * fix siphoning not using necrocornsNaiveFastForward
            fix bug where corruption is multiplied by days and divided by ticks per day for comparison of necrocorn per day values in necrocornFastForward

            * Merged in master (pull request #1234)

            Redshift pacts logic bugfixes

            * fix siphoning not using necrocornsNaiveFastForward
            fix bug where corru

--- a/res/i18n/crowdin/es.json
+++ b/res/i18n/crowdin/es.json
@@ -1,9 +1,9 @@
 {
-    "console.intro": "Eres un gatito en un bosque de hierba gatera.",
+    "console.intro": "Eres un gatito en un bosque de gavilán",
     "console.intro.zebra": "Eres una cebra en una sabana llena de minas de titanio.",
     "achievements.header": "Logros: {0} de {1}",
-    "achievements.msg.unlock": "Logro desbloqueado: ¡{0}!",
-    "achievements.msg.starUnlock": "Estrella de logro desbloqueada: ¡{0}!",
+    "achievements.msg.unlock": "Logro desbloqueado: {0}!",
+    "achievements.msg.starUnlock": "Estrella de logro desbloqueada: {0}!",
     "achievements.anachronox.title": "Anachronox",
     "achievements.anachronox.desc": "Por favor, pare",
     "achievements.atlasUnmeowed.title": "Atlas sin Miau",
@@ -16,7 +16,7 @@
     "achievements.heartOfDarkness.title": "Corazón de la oscuridad",
     "achievements.heartOfDarkness.desc": "Conviértete en el jefe de una tribu de Zebras. (¿Cómo es esto posible?)",
     "achievements.hundredYearsSolitude.title": "Cien años de soledad",
-    "achievements.hundredYearsSolitude.desc": "¿Cuán lejos es demasiado lejos?",
+    "achievements.hundredYearsSolitude.desc": "¿Qué tan lejos es demasiado lejos?",
     "achievements.ironWill.title": "Voluntad de hierro",
     "achievements.ironWill.desc": "Realmente te lo mereces",
     "achievements.jupiterAscending.title": "Júpiter ascendiendo",
@@ -34,9 +34,9 @@
     "achievements.shadowOfTheColossus.desc": "Construye un Ziggurat teniendo solo un gatito",
     "achievements.sinsOfEmpire.title": "Pecados de un Imperio Solar",
     "achievements.sinsOfEmpire.desc": "Espera, ¿en serio?",
-    "achievements.soilUptuned.title": "Campos roturados",
-    "achievements.soilUptuned.desc": "Ten 45 pasturas en modo Voluntad de hierro",
-    "achievements.spaceOddity.title": "Rareza espacial",
+    "achievements.soilUptuned.title": "Tierras vírgenes vueltas hacia arriba",
+    "achievements.soilUptuned.desc": "Tener 45 pasturas en modo Voluntad de hierro",
+    "achievements.spaceOddity.title": "Singularidad Espacial",
     "achievements.spaceOddity.desc": "Completa un programa lunar en modo Voluntad de hierro",
     "achievements.spaceOddity.starDesc": "Obtener el programa de la luna en IW sin ningún punto de parangón",
     "achievements.sunGod.title": "Dios Sol",
@@ -49,95 +49,95 @@
     "achievements.theElderLegacy.desc": "Sé el primer jugador en probar Kittens Game Móvil",
     "achievements.uberkatzhen.title": "Uberkatzchen",
     "achievements.uberkatzhen.desc": "Lo que no te mata te hace más fuerte",
-    "achievements.uniception.title": "El uniorigen",
-    "achievements.uniception.desc": "Descubre la conspiración dentro de la conspiración",
-    "achievements.unicornConspiracy.title": "Uniconspiración",
-    "achievements.unicornConspiracy.desc": "¡Desvela la conspiración de los unicornios!",
+    "achievements.uniception.title": "Unicepción",
+    "achievements.uniception.desc": "Encuentra la conspiración dentro de la conspiración",
+    "achievements.unicornConspiracy.title": "Conspiración de unicornios",
+    "achievements.unicornConspiracy.desc": "¡Levanta la mortaja de la conspiración Unicornio!",
     "achievements.utopiaProject.title": "Proyecto Utopía",
-    "achievements.utopiaProject.desc": "Obtén una felicidad total de más de 150 %",
-    "achievements.utopiaProject.starDesc": "Obtén una felicidad todal de más de 500 %",
-    "achievements.winterIsComing.title": "El invierno se acerca",
-    "achievements.winterIsComing.desc": "Deja morir a 10 gatitos",
-    "achievements.youMonster.title": "Cómo pudiste",
-    "achievements.youMonster.desc": "Pobres gatitos.",
-    "ai.apocalypse.msg": "IA ha destruido el {0} % de tus recursos",
-    "bld.msg.automation": "Activando automatización del taller",
-    "bld.msg.automation.beams": "Gastaste {0} maderas, ¡vigas +{1}!",
-    "bld.msg.automation.plates": "Gastaste {0} hierros, ¡placas +{1}!",
-    "bld.msg.automation.skip": "Omitiendo automatización del taller...",
-    "bld.msg.automation.slabs": "Gastaste {0} minerales, ¡losas +{1}!",
-    "btn.all": "Todo",
-    "btn.all.minor": "todo",
+    "achievements.utopiaProject.desc": "Obtenga una felicidad total de más del 150%",
+    "achievements.utopiaProject.starDesc": "Obtenga una felicidad total de más del 500%",
+    "achievements.winterIsComing.title": "Se acerca el invierno",
+    "achievements.winterIsComing.desc": "Muere 10 gatitos",
+    "achievements.youMonster.title": "Tú, monstruo",
+    "achievements.youMonster.desc": "Pobres gatitos",
+    "ai.apocalypse.msg": "AI ha destruido {0}% de tus recursos",
+    "bld.msg.automation": "Activación de la automatización del taller",
+    "bld.msg.automation.beams": "¡Gastado {0} madera, + {1} vigas!",
+    "bld.msg.automation.plates": "¡Gastado {0} planchas de hierro, + {1}!",
+    "bld.msg.automation.skip": "Saltarse la automatización del taller ...",
+    "bld.msg.automation.slabs": "¡Gastado {0} minerales, + {1} losas!",
+    "btn.all": "Todos",
+    "btn.all.minor": "todos",
     "btn.all.assign": "[+todo]",
-    "btn.all.unassign": "[-all]",
+    "btn.all.unassign": "[-todo]",
     "btn.aoff.tooltip": "Automatización desactivada",
-    "btn.aon.tooltip": "Automatización habilitada",
+    "btn.aon.tooltip": "Automatización activada",
     "btn.build": "Construir",
     "btn.challenge": "Iniciar desafío",
-    "btn.complete": "(terminado)",
-    "btn.complete.capital": "(Terminado)",
-    "btn.craft": "Fabricar",
+    "btn.complete": "(completo)",
+    "btn.complete.capital": "(Completo)",
+    "btn.craft": "Artesanía",
     "btn.feed": "Alimentar",
-    "btn.fix.cryo": "Reparar criocámara",
+    "btn.fix.cryo": "Reparar Criocámara",
     "btn.leader": "Líder",
     "btn.nextPage": "Página siguiente",
     "btn.off.minor": "apagado",
     "btn.off.tooltip": "Edificio desactivado",
     "btn.on.minor": "encendido",
-    "btn.on.tooltip": "Edificio habilitado",
-    "btn.precraft": "Prefabricar",
+    "btn.on.tooltip": "Edificio activado",
+    "btn.precraft": "Precraftear",
     "btn.prevPage": "Página anterior",
     "btn.promote": "Promover",
-    "btn.refine": "Refinar",
-    "btn.research": "Investigar",
+    "btn.refine": "Refineria",
+    "btn.research": "Investigación",
     "btn.reset": "Restablecer",
     "btn.sell": "Vender",
     "btn.sell.minor": "vender",
-    "btn.trade": "Cambiar",
+    "btn.trade": "Comercio",
     "btn.blocked.capital": "(Bloqueado)",
-    "sell.all.confirmation.msg": "¿Seguro que quieres vender todo?",
+    "sell.all.confirmation.msg": "¿Estás seguro de que quieres vender todo?",
     "construct.all.confirmation.title": "Construir todo",
-    "construct.all.confirmation.msg": "¿Seguro que quieres construir todos los edificios?",
+    "construct.all.confirmation.msg": "¿Estás seguro de que deseas construir todos los edificios?",
     "construct.all.msg": "{0} x{1} construido.",
     "buildings.academy.label": "Academia",
-    "buildings.academy.desc": "Mejora tu tasa de investigación y la velocidad de crecimiento de las habilidades de tus gatitos. Cada nivel de mejora aumenta tu producción científica en un 20 %",
-    "buildings.academy.flavor": "La curiosidad es la base de la ciencia. Sus felinas muertes fueron nobles",
+    "buildings.academy.desc": "Mejora tu ratio de investigación y la velocidad de crecimiento de tus habilidades con los gatitos. Cada nivel de mejora mejora tu producción científica en un 20%",
+    "buildings.academy.flavor": "La curiosidad es la base de la ciencia. Nuestros gatos murieron noblemente",
     "buildings.accelerator.label": "Acelerador",
-    "buildings.accelerator.desc": "Convierte titanio en uranio",
-    "buildings.accelerator.flavor": "Gran Colisionador de Gatrones",
+    "buildings.accelerator.desc": "Convierte titanio en uranio (sic)",
+    "buildings.accelerator.flavor": "Gran Colisionador Catron",
     "buildings.aicore.label": "Núcleo de IA",
-    "buildings.aicore.desc": "FelinOS, una inteligencia artificial de última generación. Absolutamente inofensiva. Cada nivel de mejora aumenta el consumo de energía del núcleo en un 75 %.",
-    "buildings.aicore.flavor": "Es hora de hacer a un lado nuestras diferencias, prrrrr la ciencia.",
+    "buildings.aicore.desc": "FelineOS, una inteligencia artificial de última generación. Absolutamente inofensivo. Cada nivel de actualización aumentará el consumo de energía central en un 75%",
+    "buildings.aicore.flavor": "Es hora de poner nuestras diferencias a un lado para la ciencia",
     "buildings.aicore.attemptsell": "Acceso denegado.",
     "buildings.amphitheatre.label": "Anfiteatro",
-    "buildings.amphitheatre.desc": "Reduce los efectos negativos de la sobrepoblación en un 5 %. El efecto es acumulativo, pero sus beneficios serán cada vez menores. Genera cultura.",
-    "buildings.amphitheatre.flavor": "Proyectando \"Todos los perros van al cielo\" de lunes a domingo",
+    "buildings.amphitheatre.desc": "Reduce los efectos negativos de la superpoblación en un 5%. Este efecto se acumula pero tiene un rendimiento decreciente. Produce cultura",
+    "buildings.amphitheatre.flavor": "Todos los días 'Todos los perros van a las exhibiciones del cielo'",
     "buildings.aqueduct.label": "Acueducto",
-    "buildings.aqueduct.desc": "+3 % en producción de hierba gatera",
-    "buildings.aqueduct.flavor": "Prohibido nadar",
+    "buildings.aqueduct.desc": "+ 3% a la producción de catnip",
+    "buildings.aqueduct.flavor": "No nadar",
     "buildings.barn.label": "Granero",
-    "buildings.barn.desc": "Proporciona un espacio para almacenar tus recursos.",
+    "buildings.barn.desc": "Proporciona un espacio para almacenar sus recursos.",
     "buildings.barn.flavor": "¡Las ratas no son un problema para nosotros!",
-    "buildings.biolab.label": "Lab. biológico",
-    "buildings.biolab.desc": "Mejora la efectividad del refinamiento de hierba gatera en un 10 %. Potenciado es aún más efectivo.",
-    "buildings.biolab.flavor": "Nuevos puestos de posdoctorado disponibles.",
+    "buildings.biolab.label": "Laboratorio biológico",
+    "buildings.biolab.desc": "Mejora la efectividad del refinamiento de catnip en un 10%. Más eficaz si está alimentado.",
+    "buildings.biolab.flavor": "Nuevas posiciones postdoctorado disponibles.",
     "buildings.broadcasttower.label": "Torre de transmisión",
-    "buildings.broadcasttower.desc": "Genera cultura y felicidad. Con una alta producción energética es aún más efectiva.",
-    "buildings.calciner.label": "Horno de calcinación",
-    "buildings.calciner.desc": "Una fuente muy efectiva de metal. Consume 1,5 minerales y 0,02 petróleo por punto. Produce hierro y algo de titanio",
+    "buildings.broadcasttower.desc": "Genera cultura y felicidad. Más efectivo con producción de alta energía",
+    "buildings.calciner.label": "Calcinador",
+    "buildings.calciner.desc": "Una fuente de metal muy efectiva. Consume 1,5 minerales y 0,02 de aceite por tick. Produce hierro y una pequeña cantidad de titanio",
     "buildings.chapel.label": "Capilla",
-    "buildings.chapel.desc": "Genera algo de cultura y fe por punto. Puede perfeccionarse con mejoras religiosas",
-    "buildings.chronosphere.label": "Cronósfera",
-    "buildings.chronosphere.desc": "Reubica una pequeña cantidad de recursos a través del tiempo. Se puede mejorar. Cada cronósfera aumenta las posibilidades de paradoja temporal.",
+    "buildings.chapel.desc": "Produce un poco de cultura y fe por tick. Puede mejorarse con actualizaciones religiosas",
+    "buildings.chronosphere.label": "Cronoesfera",
+    "buildings.chronosphere.desc": "Reubica una pequeña cantidad de recursos a través del tiempo. Se puede actualizar aún más. Cada Cronoesfera aumenta las posibilidades de Paradoja Temporal",
     "buildings.dataCenter.label": "Centro de datos",
-    "buildings.dataCenter.desc": "Aumenta el efecto total de los compedios en tu ciencia máxima",
+    "buildings.dataCenter.desc": "Incremento total del efecto del compendio en tu almacén máximo de ciencia",
     "buildings.factory.label": "Fábrica",
-    "buildings.factory.desc": "Mejora la efectividad de lo que fabriques",
-    "buildings.field.label": "Campo de hierba gatera",
-    "buildings.field.desc": "Planta algo de hierba gatera para que crezca en la aldea. Los campos tienen +50 % de producción en primavera y -75 % de producción en invierno",
-    "buildings.field.flavor": "Hierba gatera hasta donde llega la vista.",
-    "buildings.gatherCatnip.label": "Recolectar hierba gatera",
-    "buildings.gatherCatnip.desc": "Recolecta hierba gatera en el bosque",
+    "buildings.factory.desc": "Mejora la efectividad de las artesanías",
+    "buildings.field.label": "Campo de Catnip",
+    "buildings.field.desc": "Planta algo de catnip para crecer en la aldea. Los campos tienen una producción de +50% en primavera y -75% de producción en invierno",
+    "buildings.field.flavor": "'Catnip hasta donde alcanza la vista.",
+    "buildings.gatherCatnip.label": "Reunir catnip",
+    "buildings.gatherCatnip.desc": "Recoge un catnip en el bosque",
     "buildings.harbor.label": "Puerto",
     "buildings.harbor.desc": "Proporciona un espacio para almacenar sus recursos",
     "buildings.harbor.flavor": "¡Ahoy, marineros!",
@@ -158,22 +158,22 @@
     "buildings.magneto.label": "Magneto",
     "buildings.magneto.desc": "Mejora tu producción total de recursos en un 2%. Cada Steamworks aumentará este efecto en un 15%. Consume petróleo.",
     "buildings.mansion.label": "Mansión",
-    "buildings.mansion.desc": "Una espaciosa mansión (cabe 1 gatito)",
-    "buildings.mansion.flavor": "El mejor contenedor disponible",
+    "buildings.mansion.desc": "Una mansión espaciosa (cada una tiene un espacio para 1 gatito)",
+    "buildings.mansion.flavor": "El mejor contenedor de envío disponible",
     "buildings.mine.label": "Mina",
-    "buildings.mine.desc": "Desbloquea el trabajo: minero. Cada nivel de mejora aumenta tu producción de mineral en 20 %",
-    "buildings.mine.flavor": "Los gatitos no le temen a la oscuridad",
-    "buildings.mint.label": "Casa de Moneda",
-    "buildings.mint.desc": "Produce recursos de lujo proporcionales a tu fuerza felina. Consume fuerza felina y algo de oro.",
+    "buildings.mine.desc": "Desbloquea el trabajo de minero. Cada nivel mejora tu producción de mineral en un 20%",
+    "buildings.mine.flavor": "100 días sin diggor mortis",
+    "buildings.mint.label": "Casa de la moneda",
+    "buildings.mint.desc": "Produce recursos de lujo proporcionales a su potencia máxima de transmisión. Consume potencia y un poco de oro",
     "buildings.observatory.label": "Observatorio",
-    "buildings.observatory.desc": "Aumenta la probabilidad de eventos astronómicos en 0,2 %",
-    "buildings.observatory.flavor": "Para algún día atrapar esa hadita de luz roja",
-    "buildings.oilWell.label": "Pozo petrolero",
-    "buildings.oilWell.desc": "Produce algo de petróleo y aumenta en 1500 el límite máximo de petróleo",
-    "buildings.oilWell.flavor": "Levantarse temprano, trabajar hasta tarde y encontrar petróleo.",
-    "buildings.pasture.label": "Pastizal",
-    "buildings.pasture.desc": "Proporciona una fuente de alimento alternativa que reduce el consumo de hierba gatera.",
-    "buildings.pasture.flavor": "¡Tómese una pinta de leche, señor!",
+    "buildings.observatory.desc": "Aumenta las posibilidades de eventos astronómicos en 0.2%",
+    "buildings.observatory.flavor": "Anhelando un día atrapar al hada de luz roja",
+    "buildings.oilWell.label": "Pozo de petróleo",
+    "buildings.oilWell.desc": "Produce un poco de aceite, +1500 al límite máximo de aceite",
+    "buildings.oilWell.flavor": "Levántese temprano, trabaje duro, golpee el petróleo",
+    "buildings.pasture.label": "Pasto",
+    "buildings.pasture.desc": "Proporciona una fuente alternativa de alimentos, que reduce el consumo de catnip",
+    "buildings.pasture.flavor": "¡Toma una pinta de leche, señor!",
     "buildings.quarry.label": "Cantera",
     "buildings.quarry.desc": "Las canteras mejoran su eficiencia minera en un 35% y producen un poco de carbón",
     "buildings.quarry.flavor": "¡Está lleno de ratones! Espera, 'cantera' equivocada",
