Added Foreign Policies: Relations

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -369,6 +369,7 @@
     "effectsMgr.statics.calcinerRatio.title": "Calciner bonus",
     "effectsMgr.statics.calcinerSteelCraftRatio.title": "Steel Plants's Calciner bonus",
     "effectsMgr.statics.calcinerSteelRatio.title": "Calciner steel production",
+    "effectsMgr.statics.calcinerSteelRatioBonus.title": "Calciner steel production bonus",
     "effectsMgr.statics.calcinerSteelReactorBonus.title": "Calciner steel production bonus",
     "effectsMgr.statics.catnipDemandWorkerRatioGlobal.title": "Workers catnip demand reduction",
     "effectsMgr.statics.catnipJobRatio.title": "Farmer tools",
@@ -431,6 +432,7 @@
     "effectsMgr.statics.globalResourceRatio.title": "Max resources bonus",
     "effectsMgr.statics.goldCostReduction.title": "Reduction in gold cost",
     "effectsMgr.statics.goldMaxRatio.title": "Maximum gold bonus",
+    "effectsMgr.statics.goldSuperRatio.title": "Gold bonus",
     "effectsMgr.statics.happiness.title": "Happiness",
     "effectsMgr.statics.hapinnessConsumptionRatio.title": "Happines consumption",
     "effectsMgr.statics.happinessKittenProductionRatio.title" : "Kitten production from happiness",
@@ -463,20 +465,25 @@
     "effectsMgr.statics.luxuryHappinessBonus.title":"Luxury happiness bonus",
     "effectsMgr.statics.mausoleumBonus.title": "Mausoleum ratio",
     "effectsMgr.statics.magnetoBoostRatio.title": "Magneto boost",
+    "effectsMgr.statics.magnetoBoostBonusPolicy.title": "Steamworks Magneto boost bonus",
     "effectsMgr.statics.magnetoRatio.title": "Production bonus",
     "effectsMgr.statics.manpowerJobRatio.title": "Hunter tools",
+    "effectsMgr.statics.mansionCostReduction.title": "Mansion cost reduction",
     "effectsMgr.statics.manuscriptCost.title": "Manuscript {0} cost",
     "effectsMgr.statics.maxKittens.title": "Kittens",
     "effectsMgr.statics.maxKittensRatio.title": "Max kittens ratio",
+    "effectsMgr.statics.mineralsSuperRatio.title": "Minerals bonus",
     "effectsMgr.statics.moonBaseStorageBonus.title": "Moon Base capacity bonus",
     "effectsMgr.statics.moonOutpost-unobtainiumPerTickSpace.title": "Lunar Outpost - Unobtainium conversion",
     "effectsMgr.statics.mysticismBonus.title" : "Mysticism Bonus",
     "effectsMgr.statics.necrocornPerDay.pact.title": "Necrocorn consumption",
+    "effectsMgr.statics.negativeCycleRatioPolicy.title": "Cycle negative effect reduction",
     "effectsMgr.statics.nextHashLevelAt.title": "Next hashrate level at",
     "effectsMgr.statics.nonZebraRelationModifier.title" : "Non-zebra relations modifier",
     "effectsMgr.statics.observatoryRatio.title": "Observatory science bonus",
     "effectsMgr.statics.onAHillCultureCap.title" :"Culture cap bonus",
     "effectsMgr.statics.oilReductionRatio.title": "Oil consumption reduction",
+    "effectsMgr.statics.oilSuperRatio.title": "Oil bonus",
     "effectsMgr.statics.oilWellRatio.title": "Oil bonus",
     "effectsMgr.statics.pactBlackLibraryBoost.title": "Black Library ratio",
     "effectsMgr.statics.pactDeficitRecoveryRatio.title": "Necrocorn deficit recovery per pyramid",
@@ -517,6 +524,7 @@
     "effectsMgr.statics.shatterVoidCost.title": "Base shatter void cost",
     "effectsMgr.statics.shatterYearBoost.title": "Custom shatter year",
     "effectsMgr.statics.shipLimit.title": "Ship limit effect",
+    "effectsMgr.statics.harborLimitRatioPolicy.title": "Ship potential bonus",
     "effectsMgr.statics.simScalingRatio.title": "Sim scaling ratio",
     "effectsMgr.statics.skillMultiplier.title": "Kitten's skill effect",
     "effectsMgr.statics.masterSkillMultiplier.title": "Master Kitten's skill effect",
@@ -548,6 +556,7 @@
     "effectsMgr.statics.t3CraftRatio.title": "Class 3 engineer's know-how",
     "effectsMgr.statics.t4CraftRatio.title": "Class 4 engineer's know-how",
     "effectsMgr.statics.t5CraftRatio.title": "Class 5 engineer's know-how",
+    "effectsMgr.statics.tankerCapacityRatioBonus.title": "Tanker capacity bonus",
     "effectsMgr.statics.temporalPressCap.title": "Temporal press cap",
     "effectsMgr.statics.tcRefineRatio.title": "Alicorns sacrifice bonus",
     "effectsMgr.statics.technocracyScienceCap.title": "Science cap bonus",
@@ -580,6 +589,7 @@
     "effectsMgr.statics.zebraAppeasedGoldPenalty.title" : "Gold penalty",
     "effectsMgr.statics.zebraPreparations.title": "Zebra Preparation",
     "effectsMgr.statics.zebraRelationModifier.title" : "Zebra relations modifier",
+    "effectsMgr.statics.zigguratCostReduction.title" : "Monument cost reduction",
     "effectsMgr.type.resConversion": "{0} conversion",
     "effectsMgr.type.resCraftRatio": "{0} craft effectiveness",
     "effectsMgr.type.resDemandRatio": "{0} demand reduction",
@@ -736,6 +746,10 @@
     "policy.clearSkies.desc" : "Kitten psychologists are concerned about the effect of space mirrors on kitten happiness. Rejecting them will provide a slight happiness boost.",
     "policy.cryochamberExtraction.label": "Immortalism",
     "policy.cryochamberExtraction.desc" : "Extract cryochambers (?)",
+    "policy.dragonRelationsPhysicists.label" : "Dragon Relations: Physicists",
+    "policy.dragonRelationsPhysicists.desc" : "Work together with dragon physicists to improve reactors.",
+    "policy.dragonRelationsAstrologers.label" : "Dragon Relations: Astrologers",
+    "policy.dragonRelationsAstrologers.desc" : "Work together with Dragon astrologers to to study celestial objects.",
     "policy.terraformingInsight.label": "Space expansionism",
     "policy.terraformingInsight.desc" : "Terraforming efficiency is increased",
     "policy.communism.label" : "Communism",
@@ -760,6 +774,12 @@
     "policy.frugality.desc": "Stoic philosophers are placed in charge of the mints, making them more effective by reducing corruption.",
     "policy.fullIndustrialization.label" : "Full Industrialization",
     "policy.fullIndustrialization.desc" : "Take the advice of your new captains of industry, slightly improving the crafting bonus each factory provides.",
+    "policy.griffinRelationsMetallurgists.label" : "Griffin Relations: Metallurgists",
+    "policy.griffinRelationsMetallurgists.desc" : "Work together with griffin metallurgists to improve steel plants.",
+    "policy.griffinRelationsScouts.label" : "Griffin Relations: Scouts",
+    "policy.griffinRelationsScouts.desc" : "Work together with griffin scouts to improve hunting.",
+    "policy.griffinRelationsMachinists.label" : "Griffin Relations: Machinists",
+    "policy.griffinRelationsMachinists.desc" : "Work together with griffin machinists to improve your machines.",
     "policy.isolationism.label" : "Isolationism",
     "policy.isolationism.desc" : "Engage in protectionism of all types, making trades cheaper in terms of gold.",
     "policy.knowledgeSharing.label" : "Knowledge Sharing",
@@ -774,8 +794,16 @@
     "policy.monarchy.desc" : "Best for societies benefiting from past experiences. Makes the leader's trait twice as powerful. Maintaining the royal court takes 10% of gold production.",
     "policy.mysticism.label" : "Mysticism",
     "policy.mysticism.desc" : "Accept the view that there are forces beyond the comprehension of kittens. Gain a small bonus to culture and faith production, though you might look silly for a while.",
+    "policy.nagaRelationsMasons.label" : "Naga Relations: Masons",
+    "policy.nagaRelationsMasons.desc" : "Work together with Naga masons to make better housing for kittens.",
+    "policy.nagaRelationsCultists.label" : "Naga Relations: Cultists",
+    "policy.nagaRelationsCultists.desc" : "Work together with Naga cultists to build monuments",
     "policy.necrocracy.label" : "Necrocracy",
     "policy.necrocracy.desc" : "Your society offers itself to the elders, they will take over and bring dark times, but you will get a production bonus from BLS.",
+    "policy.lizardRelationsEcologists.label" : "Lizard Relations: Ecologists",
+    "policy.lizardRelationsEcologists.desc" : "Work together with lizard ecologists to preserve Cath.",
+    "policy.lizardRelationsPriests.label" : "Lizard Relations: Priests",
+    "policy.lizardRelationsPriests.desc" : "Work together with lizard priests to praise the sun together.",
     "policy.openWoodlands.label" : "Open Woodlands",
     "policy.openWoodlands.desc" : "Allow some limited development of nearby lands, increasing wood and mineral production.",
     "policy.outerSpaceTreaty.label" : "Outer Space Treaty",
@@ -788,12 +816,20 @@
     "policy.rationing.desc": "Stoic philosophers encourage restraint and saving, making hunting more effective and reducing the effect of happiness on catnip consumption.",
     "policy.republic.label" : "Republic",
     "policy.republic.desc" : "Best for large societies. Highly promoted leaders will provide a small bonus to the production of all kittens.",
+    "policy.sharkRelationsScribes.label" : "Shark Relations: Scribes",
+    "policy.sharkRelationsScribes.desc" : "Work together with shark scribes to record Cath's history.",
+    "policy.sharkRelationsShipwrights.label" : "Shark Relations: Shipwrights",
+    "policy.sharkRelationsShipwrights.desc" : "Work together with shark shipwrights to improve vessels.",
     "policy.siphoning.label" : "Siphoning",
     "policy.siphoning.desc" : "Pacts consume alicorns and slow down corruption instead of consuming necrocorns. Lack of alicorns or corruption is compensated by consuming necrocorns.",
     "policy.socialism.label" : "Socialism",
     "policy.socialism.desc" : "Has no effect",
     "policy.spaceBasedTerraforming.label" : "Space-based terraforming",
     "policy.spaceBasedTerraforming.desc" : "Put giant mirrors in the sky, boosting solar farms consistency. Unlocks Space Mirrors.",
+    "policy.spiderRelationsGeologists.label" : "Spider Relations: Geologists",
+    "policy.spiderRelationsGeologists.desc" : "Work together with spider geologists to improve your mining and oil industry.",
+    "policy.spiderRelationsChemists.label" : "Spider Relations: Chemists",
+    "policy.spiderRelationsChemists.desc" : "Work together with spider chemists to study chemical processes.<br><br>Effect: Spiders now sell kerosene",
     "policy.stoicism.label" : "Stoicism",
     "policy.stoicism.desc" : "The stoics teach that we ought to endure hardship without complaint. Halve consumption of luxury resources, and breweries will consume less resources.",
     "policy.stripMining.label" : "Strip Mining",
@@ -863,7 +899,7 @@
     "prestige.codexVox.label": "Codex Vox",
     "prestige.codexVox.desc": "Improves manuscript craft ratio by 25%.",
     "prestige.diplomacy.label": "Diplomacy",
-    "prestige.diplomacy.desc": "Races will be discovered earlier and with better standing. Unlocks more trade upgrades.",
+    "prestige.diplomacy.desc": "Races will be discovered earlier and with better standing. Unlocks more trade upgrades and policies.",
     "prestige.divineProportion.label": "Divine Proportion",
     "prestige.divineProportion.desc": "Reduce all price ratios by 1.7%",
     "prestige.engeneering.label": "Enlightenment",
