Added Lizard diplomats, changed Nagas and sharks

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -468,8 +468,8 @@
     "effectsMgr.statics.magnetoBoostBonusPolicy.title": "Steamworks Magneto boost bonus",
     "effectsMgr.statics.magnetoRatio.title": "Production bonus",
     "effectsMgr.statics.manpowerJobRatio.title": "Hunter tools",
-    "effectsMgr.statics.mansionCostReduction.title": "Mansion cost reduction",
     "effectsMgr.statics.manuscriptCost.title": "Manuscript {0} cost",
+    "effectsMgr.statics.manuscriptTradeChanceIncrease.title": "Manuscript trade chance bonus",
     "effectsMgr.statics.maxKittens.title": "Kittens",
     "effectsMgr.statics.maxKittensRatio.title": "Max kittens ratio",
     "effectsMgr.statics.mineralsSuperRatio.title": "Minerals bonus",
@@ -492,6 +492,7 @@
     "effectsMgr.statics.pactFaithRatio.title": "Faith per pyramid",
     "effectsMgr.statics.pactGlobalProductionRatio.title": "Production per pyramid",
     "effectsMgr.statics.pactGlobalResourceRatio.title": "Storage per pyramid",
+    "effectsMgr.statics.parchmentTradeChanceIncrease.title": "Parchment trade chance bonus",
     "effectsMgr.statics.pollutionRatio.title": "Pollution production",
     "effectsMgr.statics.policyFakeBought.title": "1.25 policy cost multiplier",
     "effectsMgr.statics.planetCrackerStorageBonus.title": "Planet Cracker capacity bonus",
@@ -499,6 +500,7 @@
     "effectsMgr.statics.priceRatio.title": "Building's prices",
     "effectsMgr.statics.prodTransferBonus.title": "Transferred cath production bonus",
     "effectsMgr.statics.productionRatio.title": "Production bonus",
+    "effectsMgr.statics.quarrySlabCraftBonus.title": "Quarry slab craft bonus",
     "effectsMgr.statics.queueCap": "Queue cap",
     "effectsMgr.statics.rankLeaderBonusConversion.title": "Conversion production per leader rank",
     "effectsMgr.statics.rationalityBonus.title" :"Rationality bonus",
@@ -589,7 +591,7 @@
     "effectsMgr.statics.zebraAppeasedGoldPenalty.title" : "Gold penalty",
     "effectsMgr.statics.zebraPreparations.title": "Zebra Preparation",
     "effectsMgr.statics.zebraRelationModifier.title" : "Zebra relations modifier",
-    "effectsMgr.statics.zigguratCostReduction.title" : "Monument cost reduction",
+    "effectsMgr.statics.zigguratTempleEffectPolicy.title" : "Ziggurat Order of the Sun effect",
     "effectsMgr.type.resConversion": "{0} conversion",
     "effectsMgr.type.resCraftRatio": "{0} craft effectiveness",
     "effectsMgr.type.resDemandRatio": "{0} demand reduction",
@@ -795,11 +797,13 @@
     "policy.mysticism.label" : "Mysticism",
     "policy.mysticism.desc" : "Accept the view that there are forces beyond the comprehension of kittens. Gain a small bonus to culture and faith production, though you might look silly for a while.",
     "policy.nagaRelationsMasons.label" : "Naga Relations: Masons",
-    "policy.nagaRelationsMasons.desc" : "Work together with Naga masons to make better housing for kittens.",
+    "policy.nagaRelationsMasons.desc" : "Work together with Naga masons to improve processing methods of stone.",
     "policy.nagaRelationsCultists.label" : "Naga Relations: Cultists",
-    "policy.nagaRelationsCultists.desc" : "Work together with Naga cultists to build monuments",
+    "policy.nagaRelationsCultists.desc" : "Study naga rituals and employ them during religious services. Monuments will now be slightly affected by Order of the Sun upgrades.",
     "policy.necrocracy.label" : "Necrocracy",
     "policy.necrocracy.desc" : "Your society offers itself to the elders, they will take over and bring dark times, but you will get a production bonus from BLS.",
+    "policy.lizardRelationsDiplomats.label" : "Lizard Relations: Diplomats",
+    "policy.lizardRelationsDiplomats.desc" : "Work together with lizard diplomats to befriend the races of Cath. Building embassies will grant a culture production bonus.",
     "policy.lizardRelationsEcologists.label" : "Lizard Relations: Ecologists",
     "policy.lizardRelationsEcologists.desc" : "Work together with lizard ecologists to preserve Cath.",
     "policy.lizardRelationsPriests.label" : "Lizard Relations: Priests",
@@ -829,7 +833,7 @@
     "policy.spiderRelationsGeologists.label" : "Spider Relations: Geologists",
     "policy.spiderRelationsGeologists.desc" : "Work together with spider geologists to improve your mining and oil industry.",
     "policy.spiderRelationsChemists.label" : "Spider Relations: Chemists",
-    "policy.spiderRelationsChemists.desc" : "Work together with spider chemists to study chemical processes.<br><br>Effect: Spiders now sell kerosene",
+    "policy.spiderRelationsChemists.desc" : "Work together with spider chemists to study chemical processes. Spiders will now sell kerosene",
     "policy.stoicism.label" : "Stoicism",
     "policy.stoicism.desc" : "The stoics teach that we ought to endure hardship without complaint. Halve consumption of luxury resources, and breweries will consume less resources.",
     "policy.stripMining.label" : "Strip Mining",
