Add flavor text for Markers

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1018,6 +1018,7 @@
     "religion.zu.ivoryTower.desc": "Improves your unicorns generation by 10%, unlocks Unicorn Rifts",
     "religion.zu.marker.label": "Marker",
     "religion.zu.marker.desc": "A strange structure made of unknown metal and serving unidentified purpose.",
+    "religion.zu.marker.flavor": "A twisted spire points the way.",
     "religion.zu.skyPalace.label": "Sky Palace",
     "religion.zu.skyPalace.desc": "Improves your unicorns generation by 50%. There was a legend of ancient and mysterious beings living in this place long ago. Every Sky Palace level improves your total gold cap by 1%",
     "religion.zu.sunspire.label": "Sunspire",
