Dynamically create resMaxRatio effects

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -372,7 +372,6 @@
     "effectsMgr.statics.calcinerSteelReactorBonus.title": "Calciner steel production bonus",
     "effectsMgr.statics.catnipDemandWorkerRatioGlobal.title": "Workers catnip demand reduction",
     "effectsMgr.statics.catnipJobRatio.title": "Farmer tools",
-    "effectsMgr.statics.catnipMaxRatio.title": "Catnip storage expansion",
     "effectsMgr.statics.challengeHappiness.title":"Happiness",
     "effectsMgr.statics.coalRatioGlobal.title": "Coal production penalty",
     "effectsMgr.statics.coalRatioGlobalReduction.title": "Coal production penalty reduction",
@@ -397,7 +396,6 @@
     "effectsMgr.statics.cryostation-uraniumMax.title": "Cryostation - Max Uranium",
     "effectsMgr.statics.cryostation-woodMax.title": "Cryostation - Max Wood",
     "effectsMgr.statics.culturalExchangeBonus.title" : "Culture production bonus",
-    "effectsMgr.statics.cultureMaxRatio.title": "Max Culture bonus",
     "effectsMgr.statics.cultureMaxRatioBonus.title": "Ziggurat's max culture bonus",
     "effectsMgr.statics.cultureFromManuscripts.title": "Culture from manuscripts",
     "effectsMgr.statics.dataCenterAIRatio.title": "AI data synergy bonus",
@@ -430,7 +428,6 @@
     "effectsMgr.statics.globalRelationsBonus.title" : "Relations bonus",
     "effectsMgr.statics.globalResourceRatio.title": "Max resources bonus",
     "effectsMgr.statics.goldCostReduction.title": "Reduction in gold cost",
-    "effectsMgr.statics.goldMaxRatio.title": "Maximum gold bonus",
     "effectsMgr.statics.happiness.title": "Happiness",
     "effectsMgr.statics.hapinnessConsumptionRatio.title": "Happines consumption",
     "effectsMgr.statics.happinessKittenProductionRatio.title" : "Kitten production from happiness",
@@ -585,6 +582,7 @@
     "effectsMgr.type.resDemandRatio": "{0} demand reduction",
     "effectsMgr.type.resGlobalCraftRatio": "{0} craft effectiveness bonus",
     "effectsMgr.type.resMax": "Max {0}",
+    "effectsMgr.type.resMaxRatio": "Max {0} bonus",
     "effectsMgr.type.resProduction": "{0} production",
     "effectsMgr.type.resRatio": "{0} bonus",
     "effectsMgr.statics.coalPolicyRatio.title": "Coal production bonus",
